--- a/application.yml
+++ b/application.yml
@@ -6,9 +6,9 @@ spring:
 spring:
   profiles: dev
   application:
-    name: microservicecloud-config-dev
+    name: cloud-config-dev
 ---
 spring:
   profiles: test
   application:
-    name: microservicecloud-config-test
+    name: cloud-config-test
