--- a/cloud-eureka-client.yml
+++ b/cloud-eureka-client.yml
@@ -24,7 +24,7 @@ spring:
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url:
-      defaultZone: http://eureka7001.com:7001/eureka
+      defaultZone: http://localhost:7001/eureka
   instance:
     instance-id: cloud-eureka-client-9201  #自定义服务名称信息
     prefer-ip-address: true     #访问路径可以显示IP地址
