--- a/cloud-zuul.yml
+++ b/cloud-zuul.yml
@@ -9,24 +9,25 @@ server:
     port: 8101
 
 spring: 
-    application:
-	name: cloud-zuul
+  profiles: dev
+  application:
+    name: cloud-zuul
 
 eureka:
-    client: 
-	service-url:
-	defaultZone: http://localhost:7001/eureka/
+  client: 
+    service-url:
+      defaultZone: http://localhost:7001/eureka/
     instance:
-	instance-id: cloud-zuul-9401
-	prefer-ip-address: true
+      instance-id: cloud-zuul-9401
+      prefer-ip-address: true
 
 
 zuul:
-    predix: /zuul
-    ignored-services: "*"
-    routes:
-	mydept.serviceId: cloud-eureka-client
-	mydept.path: /mycloud/**
+  predix: /zuul
+  ignored-services: "*"
+  routes:
+    mydept.serviceId: cloud-eureka-client
+    mydept.path: /mycloud/**
 
 info:
   app.name: atguigu-microcloud
