--- a/cloud-hystrix-dashboard.yml
+++ b/cloud-hystrix-dashboard.yml
@@ -13,3 +13,9 @@ eureka:
     service-url: 
       defaultZone: http://localhost:7001/eureka/   
       #defaultZone: http://localhost:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/  
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
